Fixed sliders to handle taps on iOS and then adjusted so that app background can show behind status bar on iOS

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%; /* cover full width and height of viewport */
   background-blend-mode: overlay; /* smooth combination of both layers */
+
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .app-wrapper {
